--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<html>
-	<head>
-		<title>Justin Wagner</title>
-	</head>
-	<body>
-		<h1>Hello DBC!</h1>
-	</body>
-</html>
+<html><body>Hello DBC!</body></html>
