--- a/unit1_projects/dbc1.html
+++ b/unit1_projects/dbc1.html
@@ -2,28 +2,34 @@
 <html>
 	<head>
 		<title>Justin Wagner DBC1</title>
+		<link rel="stylesheet" type="text/css" href="stylesheets/dbc1.css">
 	</head>
 
 	<body>
-		<h1>Justin Wagner<h1>
-			<h2>DBC1</h2>
+		<h1>Justin Wagner</h1>
+			<div id="dbc1"><h2>DBC1</h2></div>
 			<h3>About me</h3>
+
 			<p>Hello everyone! I am a graphic designer from New York. I was raised in Plainview on Long Island, and went to school at Northeastern University in Boston. Since then I've been living in Manhattan building <b>webpages</b> and doing design work. However, I want to expand my horizons and start building web <i>apps</i>. I want to build more complex and dynamic projects, and thought that this program would be a perfect fit for me.</p>
 
 			<p>Growing up, I've always loved playing video games with my brother, who is now a software engineer, working on popular games for mobile devices. I have always had the same interests as him, and after witnessing the culture and environment he is in as well as the work he does, I've grown <b>extremely</b> interested in immersing myself in that world. <br>I've always been interesting in learning to code, and now I am going to actually going to <i>do</i> something with that interest.</p>
 
 			<h4>Interests</h4>
 			<p>Interests of mine include:
+			<div class="lists">
 			 <ul>
 			 	<li>Drawing</li>
 			 	<li>Animation</li>
 			 	<li>Playing piano</li>
 			 	<li>Watching films</li>
 			 </ul>
+			</div>
 			</p>
 
 			<h5>Reading</h5>
-			<p>I'm a huge A Song of Ice and Fire fan, I must say. Although I love all of the books, my favorites in order are:
+			<img src="images/asoiaf.png">
+			<p>I'm a huge <i>A Song of Ice and Fire</i> fan, I must say. Although I love all of the books, my favorites in order are:
+			<div class="lists books">
 				<ol>
 					<li><b>Book 3</b> - A Storm of Swords</li>
 					<li><b>Book 1</b> - A Game of Thrones</li>
@@ -31,12 +37,17 @@
 					<li><b>Book 4</b> - A Feast For Crows</li>
 					<li><b>Book 2</b> - A Clash of Kings</li>
 				</ol>
+			</div>
 			</p>
 
 			<h6>Goodbye!</h6>
-				<p>To end this, I'll leave a link to one of my <a href="https://www.youtube.com/watch?v=lyVqIkJ69VA" target="_blank">favorite animations</a>, which has inspired me and countless others.<br>
-					When you are ready to leave this page, feel free to visit my <a href="http://www.justintwagner.com">website!</a>
+				<p>To end this, I'll leave a link to one of my <a href="https://www.youtube.com/watch?v=lyVqIkJ69VA" target="_blank">favorite animations</a>, created by Gainax Studios.<br>
+				When you're ready to leave this page, click the image below to view a new music video animated by one of my favorite artists, Takashi Murakami, and featuring artist Pharrell Williams.<br>
+				<a href="https://www.youtube.com/watch?v=0-LuF-hPcTw"><img src="images/artwork.jpg"></a>
 				</p>
+				<div class="lists contact">
+				<p>Oh, and don't forget to <a href="mailto:jwag789@gmail.com">email me</a> if you want to talk!</p>
+				</div>
 
 
 
