Changed index links

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<html><body>Hello DBC!</body></html>
+<html>
+<body>
+	Hello DBC!
+	<a href="http://jwag789.github.io/unit1_projects/dbc1.html">DBC1</a>
+	<a href="http://jwag789.github.io/unit1_projects/dbc2.html">DBC2</a>
+</body>
+</html>
