--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <body>
 	Hello DBC!
-	<a href="http://jwag789.github.io/unit1_projects/dbc1.html">DBC1</a>
-	<a href="http://jwag789.github.io/unit1_projects/dbc2.html">DBC2</a>
+	<p><a href="http://jwag789.github.io/unit1_projects/dbc1.html">DBC1</a></p>
+	<p><a href="http://jwag789.github.io/unit1_projects/dbc2.html">DBC2</a></p>
+	<p><a href="http://jwag789.github.io/unit1_projects/week1_technical_blog.html">Week 1 Technical Blog</p>
 </body>
 </html>
