Added cultural blog, blog template, and updated index links

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 	<p><a href="http://jwag789.github.io/unit1_projects/dbc1.html">DBC1</a></p>
 	<p><a href="http://jwag789.github.io/unit1_projects/dbc2.html">DBC2</a></p>
 	<p><a href="http://jwag789.github.io/unit1_projects/week1_technical_blog.html">Week 1 Technical Blog</p>
+	<p><a href="http://jwag789.github.io/unit1_projects/week1_cultural_blog.html">Week 1 Cultural Blog</p>
 </body>
 </html>
