--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 	<p><a href="http://jwag789.github.io/unit1_projects/dbc2.html">DBC2</a></p>
 	<p><a href="http://jwag789.github.io/unit1_projects/week1_technical_blog.html">Week 1 Technical Blog</p>
 	<p><a href="http://jwag789.github.io/unit1_projects/week1_cultural_blog.html">Week 1 Cultural Blog</p>
+	<p><a href="http://jwag789.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</p>
 </body>
 </html>
