Updated index and added index.css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
+<!DOCTYPE html>
 <html>
+<head>
+<link rel='stylesheet' type='text/css' href='unit1_projects/stylesheets/index.css'>
+<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+</head>
 <body>
-	Hello DBC!
+	<div id="container">
+	<div id="hello">Hello DBC!</div>
+	<hr>
+	<div id="links">
 	<p><a href="http://jwag789.github.io/unit1_projects/dbc1.html">DBC1</a></p>
 	<p><a href="http://jwag789.github.io/unit1_projects/dbc2.html">DBC2</a></p>
 	<p><a href="http://jwag789.github.io/unit1_projects/week1_technical_blog.html">Week 1 Technical Blog</p>
 	<p><a href="http://jwag789.github.io/unit1_projects/week1_cultural_blog.html">Week 1 Cultural Blog</p>
-	<p><a href="http://jwag789.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</p>
+	<p><a href="http://jwag789.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</p><hr>
+</div>
+</div>
 </body>
 </html>
