Changed wireframes page

--- a/unit1_projects/wireframe_sites.html
+++ b/unit1_projects/wireframe_sites.html
@@ -20,15 +20,15 @@
 					<p>In this excercise, I have created wireframes for the three websites I talked about in my Week 1 <a href="http://jwag789.github.io/unit1_projects/week1_technical_blog.html" target="_blank">Technical Blog post.</a> Here I will talk about what problem the web page is solving, and what visual challenges there are.</p><hr>
 
 					<h3>Twitter</h3>
-					<img src="http://puu.sh/8RJYc/0bc7bd38cf.png" height="40%" width="40%">
+					<a href="http://puu.sh/8RJYc/0bc7bd38cf.png" target="_blank"><img src="http://puu.sh/8RJYc/0bc7bd38cf.png" height="40%" width="40%"></a>
 					<p><a href="http://www.twitter.com" target="_blank">Twitter</a> uses have a lot to deal with, with all of their hundreds of followers posting, friends to talk to, notifications to watch, and more. Twitter makes it easy for people to multitask and get everything they want on one main page. A user is able to read posts, make posts, write private messages, and even find suggestions for new people to follow, all on one page. The navbar never hides which makes it easy to make a post or do anything even when you are scrolling down through hundreds of tweets. It's challenging to fit all of that content on one page, but Twitter succeeds in making it easy to use without any clutter.</p>
 
 					<h3>YouTube</h3>
-					<img src="http://puu.sh/8RNfA/a1c2727657.png" height="40%" width="40%">
+					<a href="http://puu.sh/8RNfA/a1c2727657.png" target="_blank"><img src="http://puu.sh/8RNfA/a1c2727657.png" height="40%" width="40%"></a>
 					<p><a href="http://www.youtube.com" target="_blank">YouTube's</a> video page format is key in its usability and popularity. One might think it could be difficult to cram all this information on one page that is half filled up with a video. Yet, it works, and the transition between video to other sections in the page seem... seamless. What's great about the video page is that they are never forgetting that people are on this site to upload there own videos, and there is always an "Upload" button present, no matter how far down you scroll, due to the fixed position of the navbar. A problem with video websites is how to keep people on the website longer, and with the highly tailored video suggestions on the side, people find excuses to stay on YouTube all day long.</p>
 
 					<h3>Be Moved - Sony</h3>
-					<img src="http://puu.sh/8RNMh/00cca65d07.png" height="40%" width="40%">
+					<a href="http://puu.sh/8RNMh/00cca65d07.png" target="_blank"><img src="http://puu.sh/8RNMh/00cca65d07.png" height="40%" width="40%"></a>
 					<p>I find <a href="http://discover.store.sony.com/be-moved/" target="_blank">Sony's "Be Moved"</a> website layout to be very interesting and experimental. There's no visible container that you can differentiate from the background. There's no true footer, or header. The navbar dissapears as soon as you scroll down. This is because everything that is important is directly on the screen. This very dynamic "scroll down" website constantly changes its animations, images, and text as you go further down, and anything else would just be in the way. One might wonder how they can skip from one slide to the other, which is made doable with simple, light nav buttons on the right side. This website perfectly displays the Sony products by showing them in all kinds of beautiful angles, solving the problem of marketing efficiently. With so many visuals, this website might slow down older computers, but running it on a faster computer will surely be worth it.</p>
 				</article>
 			</div>
