Added fontawesome, edited dbc2

--- a/unit1_projects/dbc2.html
+++ b/unit1_projects/dbc2.html
@@ -3,12 +3,14 @@
 	<head>
 		<title>Justin Wagner DBC2</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/dbc2.css">
+		<link rel="stylesheet" type="text/css" href="font-awesome-4.1.0/css/font-awesome-min.css">
+		<link rel="stylesheet" type="text/css" href="font-awesome-4.1.0/css/font-awesome.css">
 	</head>
 
 	<body>
 		<div id="container" align="center">
 			<div id="header">
-				<h1>Hello everyone!</h1>
+				<h1><i class="fa fa-flask fa-2x"></i>      Hello everyone!</h1>
 				<p>Welcome to <span style="color:green">my</span> DBC2!</p>
 			</div>
 			<div id="sidebar" float="left">
@@ -18,7 +20,7 @@
 				<p><span style="color:yellow">Sidebar</span></p>
 				<p><a href="http://jwag789.github.io/unit1_projects/dbc2.html">My DBC2!</a></p>
 			</div>
-			<div id="sub-content">
+			<div id="sub_content">
 				<p>Hello</p>
 				<p><a href="http://www.startrek.com/page/star-trek-the-next-generation">Find out which Star Trek series is my favorite.</a></p>
 				<div class="images">
@@ -29,7 +31,7 @@
 				</div>
 			</div>
 			<div id="footer">
-				Goodbye everyone!
+				<i class="fa fa-home fa-fw"></i>Goodbye everyone!
 			</div>
 		</div>
 	</body>
