--- a/unit1_projects/dbc2.html
+++ b/unit1_projects/dbc2.html
@@ -21,7 +21,7 @@
 				<p><a href="http://jwag789.github.io/unit1_projects/dbc2.html">My DBC2!</a></p>
 			</div>
 			<div id="sub_content">
-				<p>Hello</p>
+				Hello<br>
 				<p><a href="http://www.startrek.com/page/star-trek-the-next-generation">Find out which Star Trek series is my favorite.</a></p>
 				<div class="images">
 					<img src="images/teddie.png">
@@ -29,6 +29,7 @@
 						<h3>A cool bear!</h3>
 					</div>
 				</div>
+				Have a good day!
 			</div>
 			<div id="footer">
 				<i class="fa fa-home fa-fw"></i>Goodbye everyone!
