Updated blog template to be responsive

--- a/unit1_projects/week1_cultural_blog.html
+++ b/unit1_projects/week1_cultural_blog.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Justin Wagner Week 1 Cultural Blog</title>
-		<link rel="stylesheet" type="text/css" href="stylesheets/week1_cultural_blog.css">
+		<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css">
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700,400italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:300,400,700,400italic' rel='stylesheet' type='text/css'>
 	</head>
@@ -18,6 +18,8 @@
 				<h2>Week 1</h2>
 				<article>
 					<p>This article includes my reaction to Shereef's <a href="http://vimeo.com/85001014" target="_blank">fireside chat</a></p><hr>
+				</article>
+				<article>
 
 					<p>Shereef's fireside chat was a clarifying and informative session for me, in that it made my expectations more clear. The way he described the course and it's group team mentality is how I pictured things would be, since all signs have been pointing to that since I applied. The effort that is expected from students as well is also what I expected, and I am <b><i>excited</i></b> to put that effort in.</p>
 
