Updated old blogs to be responsive. Updated index page. Updated font-awesome css.

--- a/index.html
+++ b/index.html
@@ -2,19 +2,74 @@
 <html>
 <head>
 <link rel='stylesheet' type='text/css' href='unit1_projects/stylesheets/index.css'>
-<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Paytone+One' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Josefin+Slab' rel='stylesheet' type='text/css'>
+<link href="unit1_projects/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
+	<div class="links">
+		<ul>
+			<li>Justin Wagner</li>
+			<li><a href="#link">Links</a></li>
+			<li><a href="#contact">Contact</a></li>
+		</ul>
+	</div>
 	<div id="container">
-	<div id="hello">Hello DBC!</div>
-	<hr>
-	<div id="links">
-	<p><a href="http://jwag789.github.io/unit1_projects/dbc1.html">DBC1</a></p>
-	<p><a href="http://jwag789.github.io/unit1_projects/dbc2.html">DBC2</a></p>
-	<p><a href="http://jwag789.github.io/unit1_projects/week1_technical_blog.html">Week 1 Technical Blog</p>
-	<p><a href="http://jwag789.github.io/unit1_projects/week1_cultural_blog.html">Week 1 Cultural Blog</p>
-	<p><a href="http://jwag789.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</p><hr>
-</div>
-</div>
+	
+	<div class="subheader welcome1">
+		<h1>Welcome</h1>
+	</div>
+	<div class="subheader welcome2">
+		<h1>Welcome</h1>
+	</div>
+	<div class="subheader welcome3">
+		<h1>Welcome</h1>
+	</div>
+	<div class="subheader welcome4">
+		<h1>Welcome</h1>
+	</div><br/><br/><br/><br/>
+<center><span style="color:#E64D62"><i class="fa fa-fire fa-5x"></i></span></center>
+	</div>
+
+	<nav>
+		<a name="link"></a>
+		<div id="navwrapper">
+		<article>
+
+			<h1>Week 1</h1>
+			<ul>
+			<li><a href="http://jwag789.github.io/unit1_projects/dbc1.html">DBC1</a></li>
+	<li><a href="http://jwag789.github.io/unit1_projects/dbc2.html">DBC2</a></li>
+	<li><a href="http://jwag789.github.io/unit1_projects/week1_technical_blog.html">Week 1 Technical Blog</a></li>
+	<li><a href="http://jwag789.github.io/unit1_projects/week1_cultural_blog.html">Week 1 Cultural Blog</a></li>
+	<li><a href="http://jwag789.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</a></li></ul>
+</article>
+	<article>
+			<h1>Week 2</h1>
+			<ul>
+			<li><a href="http://jwag789.github.io/unit1_projects/dbc1.html">DBC1</a></li>
+	<li><a href="http://jwag789.github.io/unit1_projects/dbc2.html">DBC2</a></li>
+	<li><a href="http://jwag789.github.io/unit1_projects/week1_technical_blog.html">Week 1 Technical Blog</a></li>
+	<li><a href="http://jwag789.github.io/unit1_projects/week1_cultural_blog.html">Week 1 Cultural Blog</a></li>
+	<li><a href="http://jwag789.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</a></li></ul>
+</article>
+	</nav>
+	<footer>
+		<a name="contact"></a>
+		<div id="contactwrapper">
+			<div id="contactleft">
+			<h1>CONTACT ME</h1>
+			<p>Feel Free to contact me any time!</p>
+			</div>
+			<div id="contactright">
+				<a href="http://github.com/jwag789"><i class="fa fa-github-alt fa-5x"></i></a>
+				<a href="http://www.twitter.com/jwag789"><i class="fa fa-twitter fa-5x"></i></a>
+				<a href="http://www.facebook.com/justinchrono"><i class="fa fa-facebook-square fa-5x"></i></a>
+				<a href="https://www.linkedin.com/profile/view?id=196850623"><i class="fa fa-linkedin fa-5x"></i></a>
+				<a href="https://plus.google.com/u/0/111848734630705394847/"><i class="fa fa-google-plus fa-5x"></i></a>
+				<a href="mailto:jwag789@gmail.com"><i class="fa fa-envelope fa-5x"></i></a>
+			</div>	
+		</div>
+	</footer>
 </body>
 </html>
