Updated index, wireframe

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 			<p>Feel Free to contact me any time!</p>
 			</div>
 			<div id="contactright">
-				<a href="http://github.com/jwag789"><i class="fa fa-github-alt fa-5x"></i></a>
-				<a href="http://www.twitter.com/jwag789"><i class="fa fa-twitter fa-5x"></i></a>
-				<a href="http://www.facebook.com/justinchrono"><i class="fa fa-facebook-square fa-5x"></i></a>
-				<a href="https://www.linkedin.com/profile/view?id=196850623"><i class="fa fa-linkedin fa-5x"></i></a>
-				<a href="https://plus.google.com/u/0/111848734630705394847/"><i class="fa fa-google-plus fa-5x"></i></a>
+				<a href="http://github.com/jwag789" target="_blank"><i class="fa fa-github-alt fa-5x"></i></a>
+				<a href="http://www.twitter.com/jwag789" target="_blank"><i class="fa fa-twitter fa-5x"></i></a>
+				<a href="http://www.facebook.com/justinchrono" target="_blank"><i class="fa fa-facebook-square fa-5x"></i></a>
+				<a href="https://www.linkedin.com/profile/view?id=196850623" target="_blank"><i class="fa fa-linkedin fa-5x"></i></a>
+				<a href="https://plus.google.com/u/0/111848734630705394847/" target="_blank"><i class="fa fa-google-plus fa-5x"></i></a>
 				<a href="mailto:jwag789@gmail.com"><i class="fa fa-envelope fa-5x"></i></a>
 			</div>	
 		</div>
