--- a/unit1_projects/my_wireframe.html
+++ b/unit1_projects/my_wireframe.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Justin Wagner Week 2 'My Wireframe'</title>
-	</head>
-	<body>
-		<p>The plan for my web page is to make something very clean and simple. The design elements I want to play with are typography and negative space, and make something that should pop out. I want to put in links to my work, and eventually other elements, but I don't want to use up too much space. I am thinking of a header and footer for now, but I want the container to be 100% for now. I plan to base the page on a fluid layout and make my page responsive.</p>
+		<title>Justin Wagner Week 1 Technical Blog</title>
+		<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css">
+		<link href='http://fonts.googleapis.com/css?family=Paytone+One|Josefin+Slab' rel='stylesheet' type='text/css'>
 
-		<img src="http://puu.sh/903fa/6595de8f9e.png">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	</head>
+
+	<body>
+		<div id="container" align="center">
+			<div id="header">
+				<h1>My Wireframe</h1>
+				<p>Justin W</p>
+			</div>
+			
+			<div id="sub-content">
+				<h2>Week 2</h2>
+				<article>
+					<p>Here is the plan and wireframe for my index page.</p><hr>
+				</article>
+				<article>
+					<div class="column1">
+					<h3>The Plan</h3>
+					</div>
+					<div class="column2">
+					<p>The plan for my web page is to make something very clean and simple. The design elements I want to play with are typography and negative space, and make something that should pop out. I want to put in links to my work, and eventually other elements, but I don't want to use up too much space, especially from the main "hero" section. I am thinking of using a small navbar, but I want the  content container to be 100% for now, as to not see a difference between background colors. I plan to use icon fonts, and I plan to base the page on a fluid layout and make my page responsive.</p>
+					</div>
+				</article>
+				<article>
+					<div class="column1">
+					<h3>The Wireframe</h3>
+					</div>
+					<div class="column2">
+					<a href="http://puu.sh/91aEa/676e5a72a5.png" target="_blank"><img src="http://puu.sh/91aEa/676e5a72a5.png"></a>
+				</article>
+			</div>
+			<div id="footer">
+				<p>&copy; Justin Wagner - <a href="http://jwag789.github.io/">My Index</a>
+			</div>
+		</div>
 	</body>
 </html>
