Updated index, fonts

--- a/unit1_projects/my_wireframe.html
+++ b/unit1_projects/my_wireframe.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Justin Wagner Week 1 Technical Blog</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css">
-		<link href='http://fonts.googleapis.com/css?family=Paytone+One|Josefin+Slab' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Paytone+One|Josefin+Slab|Ubuntu' rel='stylesheet' type='text/css'>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	</head>
