--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
 			<h1>Week 2</h1>
 			<ul>
 			<li><a href="http://jwag789.github.io/unit1_projects/my_wireframe.html">Index Wireframe</a></li>
-	<li><a href="http://jwag789.github.io/unit1_projects/dbc2.html">DBC2</a></li>
-	<li><a href="http://jwag789.github.io/unit1_projects/week1_technical_blog.html">Week 1 Technical Blog</a></li>
-	<li><a href="http://jwag789.github.io/unit1_projects/week1_cultural_blog.html">Week 1 Cultural Blog</a></li>
-	<li><a href="http://jwag789.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</a></li></ul>
+	<li><a href="http://jwag789.github.io/unit1_projects/week2_technical.html">Week 2 Technical Blog</ul></li>
 </article>
 	</nav>
 	<footer>
