Edited week3 blogs

--- a/unit1_projects/week3_cultural.html
+++ b/unit1_projects/week3_cultural.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Justin Wagner Week 1 Technical Blog</title>
+		<title>Justin Wagner Week 3 Cultural Blog</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css">
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700,400italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:300,400,700,400italic' rel='stylesheet' type='text/css'>
@@ -11,33 +11,23 @@
 	<body>
 		<div id="container" align="center">
 			<div id="header">
-				<h1>Tech Blog</h1>
+				<h1>Cultural Blog</h1>
 				<p>Justin W</p>
 			</div>
 			
 			<div id="sub-content">
-				<h2>Week 1</h2>
+				<h2>Week 3</h2>
 				<article>
-					<p>In this blog post, I'll be talking about my three favorite websites. The sites I picked were chosen due to their creativity, usability and design. Take a look!</p><hr>
+					<p>In this post, I talk about how I can use my understanding of my <a href="http://web.cortland.edu/andersmd/learning/gregorc.htm">Gregorc Thinkin Style</a> to my advantage at DBC.</p><hr>
 				</article>
 				<article>
 					<div class="column1">
-					<h3>Twitter</h3>
+					<h3>Abstract Random</h3>
 					
 					</div>
 					<div class="column2">
-					<p></p>
-					</div>
-					<div class="column1">
-					<h3>YouTube</h3>
-					</div>
-					<div class="column2">
-					<p></p></div>
-					<div class="column1">
-					<h3>Be Moved - Sony</h3>
-					</div>
-					<div class="column2">
-					<p></p><div>
+					<p>My Gregorc Thinking Style is Abstract Random, which completely makes sense to me after looking more into it. I agree with this because I think that I work better when I discuss a problem with people. My experience in Phase 0 so far has been great, but something that would be better is working with other people in the same room. I feel that working with people online has been good so far, but will be better when we are together in the course. Realising this, I am thinking of going to meet ups to prepare myself, and to take advantage of my learning style.</p>
+					<p>Considering a fixed vs. growth mindset, I have been trying to apply this to other things in my life. I try not to be intimidated by challenges but encouraged by them, and I try to broaden my horizons on how I learn, and how I tackle a problem. By trying different things, I am able to understand more what is the best way for me to learn.</p>
 				</article>
 			</div>
 			<div id="footer">
