--- a/unit1_projects/week3_technical.html
+++ b/unit1_projects/week3_technical.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Justin Wagner Week 1 Technical Blog</title>
+		<title>Justin Wagner Week 3 Technical Blog</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css">
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700,400italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:300,400,700,400italic' rel='stylesheet' type='text/css'>
@@ -16,28 +16,26 @@
 			</div>
 			
 			<div id="sub-content">
-				<h2>Week 1</h2>
+				<h2>Week 3</h2>
 				<article>
-					<p>In this blog post, I'll be talking about my three favorite websites. The sites I picked were chosen due to their creativity, usability and design. Take a look!</p><hr>
+					<p>This blog post is about why JavaScript is popular in web development, and the ups and downs of it.</p><hr>
 				</article>
 				<article>
 					<div class="column1">
-					<h3>Twitter</h3>
-					
+					<h3>JavaScript in Web Development</h3>
+
+					<img src="images/js.png"/>
 					</div>
 					<div class="column2">
-					<p></p>
+					<p>JavaScript is an easy to use, lightweight language, so it's no wonder it's become so popular to use in web development.
+						When you hear about front end development, the languages that are ususally talked about are HTML, CSS, and JavaScript. They
+						all go hand in hand, for the most part. Also it works on the client side rather than the server side, so it's fast. With Node.js there is so much that you can do, easily building "fast and scalable" network applications. This, along with browser consoles make testing very easy. There is also a large open source community.</p>
+
+						<p>There are downsides to the language, especially if you are big company that will be storing tons of data. It cannot access databases by itself. Also, the language doesn't distinguish the difference between floating point numbers and integers, and so using a language that is more exact might be a better fit for certain scenarios. It can't access web pages hosted on another domain, and it can't close a window that it did not open. The code can also not access anything outside of the web page.</p>
+
+						<p>Personally, while practicing Ruby, Python, and JavaScript, I found JavaScript to be the least readable. I see how it is
+						helpful and easy to use with HTML, but the other languages had more "syntaxic sugar" and flowed better, in my opinion. Nevertheless, I also see its many uses, how its easy to use and test, and why it is so popular in web development.</p>
 					</div>
-					<div class="column1">
-					<h3>YouTube</h3>
-					</div>
-					<div class="column2">
-					<p></p></div>
-					<div class="column1">
-					<h3>Be Moved - Sony</h3>
-					</div>
-					<div class="column2">
-					<p></p><div>
 				</article>
 			</div>
 			<div id="footer">
