--- a/index.html
+++ b/index.html
@@ -40,16 +40,24 @@
 			<ul>
 			<li><a href="http://jwag789.github.io/unit1_projects/dbc1.html">DBC1</a></li>
 	<li><a href="http://jwag789.github.io/unit1_projects/dbc2.html">DBC2</a></li>
-	<li><a href="http://jwag789.github.io/unit1_projects/week1_technical_blog.html">Week 1 Technical Blog</a></li>
-	<li><a href="http://jwag789.github.io/unit1_projects/week1_cultural_blog.html">Week 1 Cultural Blog</a></li>
+	<li><a href="http://jwag789.github.io/unit1_projects/week1_technical_blog.html">Technical Blog</a></li>
+	<li><a href="http://jwag789.github.io/unit1_projects/week1_cultural_blog.html">Cultural Blog</a></li>
 	<li><a href="http://jwag789.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</a></li></ul>
 </article>
 	<article>
 			<h1>Week 2</h1>
 			<ul>
+			<li><a href="http://jwag789.github.io/unit1_projects/week2_technical.html">Technical Blog</li>
 			<li><a href="http://jwag789.github.io/unit1_projects/my_wireframe.html">Index Wireframe</a></li>
-	<li><a href="http://jwag789.github.io/unit1_projects/week2_technical.html">Week 2 Technical Blog</ul></li>
+	</ul>
 </article>
+<article>
+	<h1>Week3</h1>
+	<ul>
+		<li><a href="http://jwag789.github.io/unit1_projects/week3_technical.html">Technical Blog</li>
+		<li><a href="http://jwag789.github.io/unit1_projects/week3_cultural.html">Cultural Blog</li>
+		<li><a href="http://jwag789.github.io/unit1_projects/dragonhorn.html" target="_blank">JavaScript Challenge</li>
+	</ul>
 	</nav>
 	<footer>
 		<a name="contact"></a>
