--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href='http://fonts.googleapis.com/css?family=Paytone+One' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Josefin+Slab' rel='stylesheet' type='text/css'>
 <link href="unit1_projects/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<meta name="description" content="My Dev Bootcamp Index">
 </head>
 <body>
 	<div class="links">
