--- a/unit1_projects/dragonhorn.html
+++ b/unit1_projects/dragonhorn.html
@@ -11,7 +11,7 @@
 	<h1>The Dragon Horn</h1>
 	<p>The king has died mysteriously, and with various claims to the throne,
 		the people decide to hold an election on who should be the next king. 
-		As you were the king's younger brother, it's between you, you're younger
+		As you were the king's younger brother, it's between you, your younger
 		brother, and your niece, along with a few other high lords. You know what
 		you need to rally everyone to your side - the legendary Dragon Horn, which
 		has the power to tame dragons and bring your people to greatness. But when
