--- a/blog-posts/week4_cultural_blog.html
+++ b/blog-posts/week4_cultural_blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Justin Wagner Week 1 Technical Blog</title>
+		<title>Justin Wagner Week 4 Cultural Blog</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css">
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700,400italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:300,400,700,400italic' rel='stylesheet' type='text/css'>
@@ -11,33 +11,18 @@
 	<body>
 		<div id="container" align="center">
 			<div id="header">
-				<h1>Tech Blog</h1>
+				<h1>Cultural Blog</h1>
 				<p>Justin W</p>
 			</div>
 			
 			<div id="sub-content">
-				<h2>Week 1</h2>
+				<h2>Week 4</h2>
 				<article>
-					<p>In this blog post, I'll be talking about my three favorite websites. The sites I picked were chosen due to their creativity, usability and design. Take a look!</p><hr>
+					<p>This blog post will be about a problem facing the tech world today!</p><hr>
 				</article>
 				<article>
-					<div class="column1">
-					<h3>Twitter</h3>
-					
-					</div>
-					<div class="column2">
-					<p></p>
-					</div>
-					<div class="column1">
-					<h3>YouTube</h3>
-					</div>
-					<div class="column2">
-					<p></p></div>
-					<div class="column1">
-					<h3>Be Moved - Sony</h3>
-					</div>
-					<div class="column2">
-					<p></p><div>
+					<p>A problem that stood out to me that is facing the tech world today would have to be about security. As technology becomes more and more important, with businesses relying on it for manufacturing and infrastructure, the need for bulletproof security becomes much more important. With more technologies available over time, there is opportunity for more cyber threats. Not only businesses could be affected, but everybody could be, if their smart phones or computers are hacked into. Things like viruses, trojan horses, and malicious code have affected people in the past, by deleting entire computer directories, finding information, and more.</p>
+					<p>Certain things that could be done would be to spend more money on cyber security jobs. With all the increase in technology, it is hard to figure out how to spend money on it, but one of the most important things should be cyber security. If there is a big security breach, a company could lose millions. Doing things like improving firewalls and cryptography could also be helpful. Also, as of now, most computer security is made up of preventive measures. Perhaps some work can be done on creating solutions for what to do after words, such as file recovery. I'm not sure exactly how this could be done with certain viruses, but I think it's worth it for the industry to research.</p>
 				</article>
 			</div>
 			<div id="footer">
