--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
 		<li><a href="http://jwag789.github.io/blog-posts/week3_cultural.html">Cultural Blog</li>
 		<li><a href="http://jwag789.github.io/unit1_projects/dragonhorn.html" target="_blank">JavaScript Challenge</li>
 	</ul>
+</article>
+<article>
+	<h1>Week4</h1>
+	<ul>
+		<li><a href="http://jwag789.github.io/blog-posts/week4_technical.html">Technical Blog</li>
+		<li><a href="http://jwag789.github.io/blog-posts/week4_cultural_blog.html">Cultural Blog</li>
+	</ul>
+</article>
 	</nav>
 	<footer>
 		<a name="contact"></a>
