Added image to blog

--- a/blog-posts/week5_technical.html
+++ b/blog-posts/week5_technical.html
@@ -24,6 +24,7 @@
 				<article>
 					<div class="column1">
 					<h3>Classes</h3>
+					<img src="images/classes0.png"/>
 					</div>
 					<div class="column2">
 					<p>What are Ruby Classes? Ruby is an Object Oriented Programming Language, and involves objects and classes. A class is essentially a type of object, such as Array, String, or a class you create, and objects are instances of that class. Instances of that class will follow those classes rules. For example, your array "[1,5,3,6]" is an object, and it's class is Array. The methods defined in the Array class will only work for objects that were created from the Array class's initialize method. Let's do an example with our own class, which we will base on a real life object.</p>
