--- a/blog-posts/week1_cultural_blog.html
+++ b/blog-posts/week1_cultural_blog.html
@@ -11,7 +11,7 @@
 	<body>
 		<div id="container" align="center">
 			<div id="header">
-				<h1>Culture Blog</h1>
+				<h1>Cultural Blog</h1>
 				<p>Justin W</p>
 			</div>
 			
