Added week5 cultural blog

--- a/blog-posts/week5_cultural.html
+++ b/blog-posts/week5_cultural.html
@@ -24,12 +24,14 @@
 				<article>
 					<div class="column1">
 					<h3>Pairing</h3>
+					<img src="images/pairing.png"/>
 					</div>
 					<div class="column2">
 					<p>One of the most interesting aspects so far that I've encountered at Dev Bootcamp's Phase 0 is peer programming. I've been used to studying and playing around with code for a while now, but it wasn't until Phase 0 started that I began to work with and express my ideas to others. There's something really interesting and helpful when working with others. Something that really helped me was vocalizing what I was thinking about. By actually speaking about my ideas and seeing that someone agreed with me, I felt validated and more confident with my coding ability. It was nice to bounce around ideas with someone, and when one of us wouldn't know something, the other likely would. It's still a little strange to me to work as a "driver" and "navigator" role, especially when we are working online and can't look over each others shoulers, although stypi helps. I am so used to just working as an equal team where people will act as any role. But although it's new to me, splitting up the roles seems like it has its benefits, such as being able to think about different aspects of the code at once.</p>
 					</div>
 					<div class="column1">
 					<h3>Feedback</h3>
+					<img src="images/feedback.png"/>
 					</div>
 					<div class="column2">
 					<p>So far, giving and receiving feedback has been a pretty standard process, but it's definitely nice to see peoples thoughts in writing. Seeing people publicly put out their thoughts about you is interesting, and you feel the honest nature in them. So far the feedback I've given and received have been generally kind, but without too much that is actionable, as a majority of my pairings have gone very smoothly. One said that they had a little trouble hearing me so I was able to take that into account to improve future pairings. It's definitely been helpful, but I admit I find it hard to write ways that people can improve so far. I'm sure as things get more complicated, everyone will have suggestions and tips for each other on ways to improve, and I'm looking forward to that experience.</p>
