--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
 		<li><a href="http://jwag789.github.io/blog-posts/week4_cultural_blog.html">Cultural Blog</li>
 	</ul>
 </article>
+<article>
+	<h1>Week5</h1>
+	<ul>
+		<li><a href="http://jwag789.github.io/blog-posts/week5_technical.html">Technical Blog</li>
+		<li><a href="http://jwag789.github.io/blog-posts/week5_cultural_blog.html">Cultural Blog</li>
+	</ul>
+</article>
 	</nav>
 	<footer>
 		<a name="contact"></a>
