Edited cultural blog

--- a/blog-posts/week6_cultural_blog.html
+++ b/blog-posts/week6_cultural_blog.html
@@ -19,22 +19,16 @@
 				<h2>Week 5</h2>
 				<h5>June 21, 2014</h5>
 				<article>
-					<p>This blog post is about my experience with peer programming so far.</p><hr>
+					<p>This blog post is about the stereotype threat.</p><hr>
 				</article>
 				<article>
 					<div class="column1">
-					<h3>Pairing</h3>
-					<img src="images/pairing.png"/>
+					<h3>Stereotype Threat</h3>
 					</div>
 					<div class="column2">
-					<p>One of the most interesting aspects so far that I've encountered at Dev Bootcamp's Phase 0 is peer programming. I've been used to studying and playing around with code for a while now, but it wasn't until Phase 0 started that I began to work with and express my ideas to others. There's something really interesting and helpful when working with others. Something that really helped me was vocalizing what I was thinking about. By actually speaking about my ideas and seeing that someone agreed with me, I felt validated and more confident with my coding ability. It was nice to bounce around ideas with someone, and when one of us wouldn't know something, the other likely would. It's still a little strange to me to work as a "driver" and "navigator" role, especially when we are working online and can't look over each others shoulers, although stypi helps. I am so used to just working as an equal team where people will act as any role. But although it's new to me, splitting up the roles seems like it has its benefits, such as being able to think about different aspects of the code at once.</p>
-					</div>
-					<div class="column1">
-					<h3>Feedback</h3>
-					<img src="images/feedback.png"/>
-					</div>
-					<div class="column2">
-					<p>So far, giving and receiving feedback has been a pretty standard process, but it's definitely nice to see peoples thoughts in writing. Seeing people publicly put out their thoughts about you is interesting, and you feel the honest nature in them. So far the feedback I've given and received have been generally kind, but without too much that is actionable, as a majority of my pairings have gone very smoothly. One said that they had a little trouble hearing me so I was able to take that into account to improve future pairings. It's definitely been helpful, but I admit I find it hard to write ways that people can improve so far. I'm sure as things get more complicated, everyone will have suggestions and tips for each other on ways to improve, and I'm looking forward to that experience.</p>
+					<p>When you are anxious about possible confirming a negative stereotype about your identity, that is what Stereotype Threat is. It's unfortanate that prejudices exist in this world, but certain people do hold them.</p>
+
+					<p>Being Jewish, I have an idea of what it is like to be discriminated because of my background. I luckily haven't had to deal with much of this first hand, as I grew up in mostly diverse/Jewish cities, and I can't say I've dealt with any negative stereotyping myself. However, when I see this type of behavior, I try to ignore it and remember that it has nothing to do with me, and only to do with others prejudices. I don't recall many times where I thought I was in risk of confirming a stereotype for my ethnicity or anything. I've had friends who have dealt with this in their lives though, and they respond to it by ignoring the stereotypes, and not letting it get in the way of who they are. I plan to do this if I ever feel like me or anyone else is feeling stereotype threat. I will tell someone that they should not worry about how they are perceived, because it is not their fault if someone else chooses to hold prejudices. Nobody should judge somebody based on their race, gender, learning style, or anything. If everyone is supportive of each other and look past their differences, everyone will be able to help each other better and benefit.</p>
 					</div>
 				</article>
 			</div>
