--- a/blog-posts/week6_technical.html
+++ b/blog-posts/week6_technical.html
@@ -19,29 +19,43 @@
 				<h2>Week 6</h2>
 				<h5>June 21, 2014</h5>
 				<article>
-					<p>In this blog post, I will be explaining classes in Ruby, and how and why to use them.</p><hr>
+					<p>This blog post goes over different types of variable scope in Ruby. Variable scope defines where you can access a variable in your file. There are different types of variable scope in Ruby which define the scope differently. They use a special character before the variable name to define it.</p><hr>
 				</article>
 				<article>
 					<div class="column1">
-					<h3>Classes</h3>
-					<img src="images/classes0.png"/>
+					<h3>Local Variable</h3>
+					<img src="images/scope_local.png"/>
 					</div>
 					<div class="column2">
-					<p>What are Ruby Classes? Ruby is an Object Oriented Programming Language, and involves objects and classes. A class is essentially a type of object, such as Array, String, or a class you create, and objects are instances of that class. Instances of that class will follow those classes rules. For example, your array "[1,5,3,6]" is an object, and it's class is Array. The methods defined in the Array class will only work for objects that were created from the Array class's initialize method. Let's do an example with our own class, which we will base on a real life object.</p>
+					<p>A local variable is a variable that is accessible in the method or loop that it was created in. For example, a variable in an each loop would only be accessible in that each loop, or a variable like an argument in a method can only be used in that method. This is defined by starting with a <b>lowercase letter,</b> or an <b>underscore.</b></p>
 					</div>
 					<div class="column1">
-					<h3>Creating an "Album" class</h3>
-					<a href="http://jwag789.github.io/blog-posts/images/classes.png"><img src="images/classes.png"></a>
+					<h3>Global Variable</h3>
+					<img src="images/scope_global.png"/>
 					</div>
 					<div class="column2">
-					<p>This <a href="http://jwag789.github.io/blog-posts/images/classes.png">image</a> shows the different steps it takes to define a class, and to define an instance of that class. It also shows how to call instance methods on those objects. We start by opening the Album class, and define its initialize method. Here, we pass in arguments that will become instance variables, or variables that we can use on any of the methods in the class, that will work on an instance of that class. You can also make instance variables that isn't also an argument for the method, such as my "signed" variable. It will always start off as false, so I don't need to pass it through initialize, where the other variables will always be different. <b>Instance variables</b> are helpful, because now I can use them in any method. For example, I'm "@year" to define my outcome when I "play" my album, and the outcome of my "@value" of a signed album, which I also use in the value method. I wanted to make <b>instance methods</b> (which are methods that will only work on instances of that class, rather than on the class itself) like "play" and something to get the album signed, to compare it to a real life object. Think of the variables we saved as your instance or your copy of that album. It may or may not be signed. That all depends on what you do with your album. If you hand it off to a rocker (use the method), you will get it signed. If the year is old enough, it will be worth much more.</p>
+					<p>A global variable is accessible anywhere in the program. That's right, anywhere at all. This can make things very easy if you want to access something anywhere, however using global variables often is typically discouraged. Since these can be accessed and manipulated anywhere, they can make things complex and difficult to find the source of an error. Global variables are defined with a <b>bling or dollar sign ($).</b></p>
 					</div>
 					<div class="column1">
-					<h3>Output</h3>
-					<a href="http://jwag789.github.io/blog-posts/images/classes2.png"><img src="images/classes2.png"></a>
+					<h3>Instance Variable</h3>
+					<img src="images/scope_instance.png"/>
 					</div>
 					<div class="column2">
-					<p>As you can <a href="http://jwag789.github.io/blog-posts/images/classes2.png">see</a>, my Album class works and outputs the following statements with the instances I created. I created instances of my class by passing in .new to the class name, with the parameters, and saved it to a constant. It seem's my grandma is a fan of the Beatles, but not a fan of the Red Hot Chili Peppers. You can also see the value of my Californication album tripled since I got it signed! Showing this example was the best way for me to describe a class. It's great to use for a variety of purposes. When you want to create a group of objects that share similar properties that you want to pass in individually, use a class! I hope you enjoyed this tutorial!</p>
+					<p>An instance variable is a variable that is defined in a class, and then accessible anywhere in a specific instance of an object. For example, if you set an instance variable @sum to your class, each instance you make of that class will have its own sum. When you add to the sum on one instance of the class, it will only affect the sum for that instance, and not any other instance of the class. An instance variable is defined with an <b>at sign.</b></p>
+					</div>
+					<div class="column1">
+					<h3>Class Variable</h3>
+					<img src="images/scope_class.png"/>
+					</div>
+					<div class="column2">
+					<p>An class variable is similar to an instance variable, in that it is defined in a class. However it is accessible to any and every instance of the object, and is shared between them all. For example, if you have your class variable @@sum in your class, if you add to the sum in one instance of the class, it will add it to all of the instances, as it is a variable that is accessible every instance of the class. A class variable is defined with <b>two at signs.</b></p>
+					</div>
+					<div class="column1">
+					<h3>Constant Scope</h3>
+					<img src="images/scope_constant.png"/>
+					</div>
+					<div class="column2">
+					<p>A constant is a variable that should not be changed. It is accessible in the class or method that it is defined in, or if it was defined outside a class or module, it is given a global scope. These are good to use if you know that you don't want to change a certain variables value. A constant is defined starting with a <b>capital letter.</b></p>
 					</div>
 				</article>
 			</div>
