--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
 		<li><a href="http://jwag789.github.io/blog-posts/week5_cultural.html">Cultural Blog</li>
 	</ul>
 </article>
+<article>
+	<h1>Week6</h1>
+	<ul>
+		<li><a href="http://jwag789.github.io/blog-posts/week6_technical.html">Technical Blog</li>
+		<li><a href="http://jwag789.github.io/blog-posts/week6_cultural_blog.html">Cultural Blog</li>
+	</ul>
+</article>
 	</nav>
 	<footer>
 		<a name="contact"></a>
