Edited tech blog week7

--- a/blog-posts/week7_technical.html
+++ b/blog-posts/week7_technical.html
@@ -19,26 +19,34 @@
 				<h2>Week 7</h2>
 				<h5>June 29, 2014</h5>
 				<article>
-					<p>In this blog post, I'll be talking about my three favorite websites. The sites I picked were chosen due to their creativity, usability and design. Take a look!</p><hr>
+					<p>This blog post is about the differences between SQL and NoSQL.</p><hr>
 				</article>
 				<article>
-					<div class="column1">
-					<h3>Twitter</h3>
-					
-					</div>
-					<div class="column2">
-					<p></p>
-					</div>
-					<div class="column1">
-					<h3>YouTube</h3>
-					</div>
-					<div class="column2">
-					<p></p></div>
-					<div class="column1">
-					<h3>Be Moved - Sony</h3>
-					</div>
-					<div class="column2">
-					<p></p><div>
+					<h3>SQL vs NoSQL</h3>
+
+					<p>SQL and NoSQL Databases have various features that make them different. First of all, when comparing SQL and NoSQL, I am talking about <b>Relational Databases</b> (RDBMS, for SQL) and <b>non-relational, or distributed database</b> (NoSQL). The NoSQL database structure differs from RDBMS and so some operations are faster in certain databases. Another main difference is that SQL is table based, where NoSQL databases are graph databases, wide column stores, document based, or key-value pairs. Therefore, SQL is simply tables with a certain amount of rows and columns, where NoSQL does not have those limitations. This goes hand in hand with the fact that SQL databases have predefined schema, where NoSQL does not.</p>
+					<p>A big difference between the two databases is syntax. SQL databases use, of course, <b>SQL, or structured query language.</b> NoSQL varies from database to database, and the queries are focused on a collection of documents, or the <b>UnQL (Unstructured Query Language).</b> SQL is better to perform complex queries, as NoSQL doesn't have a standard interface to do so, and the queries aren't as powererful as in SQL. SQL is also a good fit for large transactional type applications, as it's more stable. However, for heirarchical data, NoSQL is better, as it allows key-value pairing.</p>
+
+					<p>As far as scalability goes, there are differences there as well. SQL is typically vertically scalable, and you can increase the load by increasing the CPU/RAM/SSD/etc. on a server. NoSQL are horizontally scalable and you can add a few more servers easily in your database infrastructure.</p>
+
+					<p>All in all there are different advantages to using SQL or NoSQL. SQL is table based and is more stable with a powerful language. NoSQL has less limitations,  uses documents, and is good for using key-value pairs and graph databases. I've dipped my toes into SQL and loved when I was able to figure how to use SELECT statements, and I'm excited to look into different NoSQL databases. I've looked into different examples of each too.</p>
+
+					<h5>SQL Examples</h5>
+					<ul>
+						<li>MySql</li>
+						<li>Oracle</li>
+						<li>Sqlite</li>
+						<li>Postgres</li>
+						<li>MS-SQL</li>
+					</ul>
+					<h5>NoSQL Examples</h5>
+					<ul>
+						<li>MongoDB</li>
+						<li>BigTable</li>
+						<li>Redis</li>
+						<li>Hbase</li>
+						<li>CouchDb</li>
+					</ul>
 				</article>
 			</div>
 			<div id="footer">
